# SplitDNS

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/: simple.rs
src/: lib.rs
src/platform/: linux.rs  macos.rs  mod.rs
